@@ -1,5 +1,8 @@
 package com.emeraldgrove.service.impl;
 
+import com.emeraldgrove.constants.ErrorMessages;
+import com.emeraldgrove.constants.GroqConstants;
+import com.emeraldgrove.constants.LogMessages;
 import com.emeraldgrove.dto.AiResponseDto;
 import com.emeraldgrove.service.ArticleSummaryService;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -19,7 +22,7 @@ import java.util.Map;
 
 @Service
 @Slf4j
-public class GroqArticleSummaryService implements ArticleSummaryService {
+public class GroqArticleSummaryServiceImpl implements ArticleSummaryService {
     private final ObjectMapper objectMapper;
     private final HttpClient httpClient;
     private final boolean groqEnabled;
@@ -29,7 +32,7 @@ public class GroqArticleSummaryService implements ArticleSummaryService {
     private final int groqSummaryMaxChars;
     private final int groqRequestTimeoutMs;
 
-    public GroqArticleSummaryService(
+    public GroqArticleSummaryServiceImpl(
         ObjectMapper objectMapper,
         @Value("${emerald-grove.ai.groq.enabled:false}") boolean groqEnabled,
         @Value("${emerald-grove.ai.groq.api-url:https://api.groq.com/openai/v1/chat/completions}") String groqApiUrl,
@@ -40,7 +43,7 @@ public class GroqArticleSummaryService implements ArticleSummaryService {
     ) {
         this.objectMapper = objectMapper;
         this.httpClient = HttpClient.newBuilder()
-            .connectTimeout(Duration.ofSeconds(5))
+            .connectTimeout(Duration.ofSeconds(GroqConstants.CONNECT_TIMEOUT_SECONDS))
             .build();
         this.groqEnabled = groqEnabled;
         this.groqApiUrl = groqApiUrl;
@@ -56,35 +59,35 @@ public class GroqArticleSummaryService implements ArticleSummaryService {
         String normalizedCurrent = normalize(currentStoredDescription);
 
         if (normalizedSource.isBlank()) {
-            log.info("Groq summary skipped: source description is blank");
+            log.info(LogMessages.LOG_GROQ_SUMMARY_SKIPPED_BLANK);
             return normalizedCurrent;
         }
 
         if (normalizedSource.equals(normalizedCurrent)) {
-            log.info("Groq summary skipped: source description is unchanged");
+            log.info(LogMessages.LOG_GROQ_SUMMARY_SKIPPED_UNCHANGED);
             return normalizedCurrent;
         }
 
         if (!groqEnabled) {
-            log.info("Groq summary skipped: emerald-grove.ai.groq.enabled=false");
+            log.info(LogMessages.LOG_GROQ_SUMMARY_SKIPPED_DISABLED);
             return trimToLimit(normalizedSource);
         }
 
         if (groqApiKey.isBlank()) {
-            log.warn("Groq summary skipped: GROQ_API_KEY is empty or unavailable in the backend process");
+            log.warn(LogMessages.LOG_GROQ_SUMMARY_SKIPPED_NO_KEY);
             return trimToLimit(normalizedSource);
         }
 
         try {
-            log.info("Groq summary request started: model={}, sourceLength={}", groqModel, normalizedSource.length());
+            log.info(LogMessages.LOG_GROQ_SUMMARY_REQUEST_STARTED, groqModel, normalizedSource.length());
             String generatedSummary = requestSummary(title, normalizedSource);
             if (!generatedSummary.isBlank()) {
-                log.info("Groq summary request succeeded: summaryLength={}", generatedSummary.length());
+                log.info(LogMessages.LOG_GROQ_SUMMARY_REQUEST_SUCCEEDED, generatedSummary.length());
                 return trimToLimit(generatedSummary);
             }
-            log.warn("Groq summary response was empty, using local fallback");
+            log.warn(LogMessages.LOG_GROQ_SUMMARY_RESPONSE_EMPTY);
         } catch (Exception exception) {
-            log.warn("Groq summary generation failed, using local fallback: {}", exception.getMessage());
+            log.warn(LogMessages.LOG_GROQ_SUMMARY_GENERATION_FAILED, exception.getMessage());
         }
 
         return trimToLimit(normalizedSource);
@@ -92,26 +95,17 @@ public class GroqArticleSummaryService implements ArticleSummaryService {
 
     private String requestSummary(String title, String sourceDescription) throws IOException, InterruptedException {
         String requestBody = objectMapper.writeValueAsString(Map.of(
-            "model", groqModel,
-            "temperature", 0.3,
-            "max_completion_tokens", 160,
-            "top_p", 0.95,
-            "stream", false,
-            "reasoning_effort", "none",
-            "reasoning_format", "hidden",
-            "messages", new Object[] {
+            GroqConstants.JSON_KEY_MODEL, groqModel,
+            GroqConstants.JSON_KEY_TEMPERATURE, GroqConstants.TEMPERATURE_SUMMARY,
+            GroqConstants.JSON_KEY_MAX_COMPLETION_TOKENS, GroqConstants.MAX_COMPLETION_TOKENS_SUMMARY,
+            GroqConstants.JSON_KEY_TOP_P, GroqConstants.TOP_P,
+            GroqConstants.JSON_KEY_STREAM, GroqConstants.STREAM,
+            GroqConstants.JSON_KEY_REASONING_EFFORT, GroqConstants.JSON_VALUE_REASONING_EFFORT_NONE,
+            GroqConstants.JSON_KEY_REASONING_FORMAT, GroqConstants.JSON_VALUE_REASONING_FORMAT_HIDDEN,
+            GroqConstants.JSON_KEY_MESSAGES, new Object[] {
                 Map.of(
-                    "role", "user",
-                    "content", """
-                        Summarize this article in 1-2 short sentences.
-                        Keep the summary under %d characters.
-                        Use the same language as the source text.
-                        Return plain text only.
-
-                        Title: %s
-                        Source text:
-                        %s
-                        """.formatted(groqSummaryMaxChars, normalize(title), sourceDescription)
+                    GroqConstants.JSON_KEY_ROLE, GroqConstants.JSON_VALUE_ROLE_USER,
+                    GroqConstants.JSON_KEY_CONTENT, String.format(GroqConstants.PROMPT_SUMMARY, groqSummaryMaxChars, normalize(title), sourceDescription)
                 )
             }
         ));
@@ -119,26 +113,26 @@ public class GroqArticleSummaryService implements ArticleSummaryService {
         HttpRequest request = HttpRequest.newBuilder()
             .uri(URI.create(groqApiUrl))
             .timeout(Duration.ofMillis(groqRequestTimeoutMs))
-            .header("Authorization", "Bearer " + groqApiKey)
-            .header("Content-Type", MediaType.APPLICATION_JSON_VALUE)
+            .header("Authorization", GroqConstants.HTTP_HEADER_AUTHORIZATION_PREFIX + groqApiKey)
+            .header(GroqConstants.HTTP_HEADER_CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
             .POST(HttpRequest.BodyPublishers.ofString(requestBody))
             .build();
 
         HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
 
         if (response.statusCode() < 200 || response.statusCode() >= 300) {
-            throw new IOException("Groq API returned status " + response.statusCode() + " with body: " + response.body());
+            throw new IOException(String.format(ErrorMessages.ERROR_GROQ_API_STATUS, response.statusCode(), response.body()));
         }
 
         JsonNode root = objectMapper.readTree(response.body());
-        JsonNode contentNode = root.path("choices").path(0).path("message").path("content");
+        JsonNode contentNode = root.path(GroqConstants.JSON_KEY_CHOICES).path(0).path(GroqConstants.JSON_KEY_MESSAGE).path(GroqConstants.JSON_KEY_CONTENT);
         return normalize(contentNode.asText(""));
     }
 
     public AiResponseDto analyzeArticle(String title, String description) throws IOException, InterruptedException {
-        log.info("Groq full analysis request started: model={}, contentLength={}", groqModel, description.length());
+        log.info(LogMessages.LOG_GROQ_ANALYSIS_REQUEST_STARTED, groqModel, description.length());
         AiResponseDto result = requestAnalysis(title, description);
-        log.info("Groq full analysis request succeeded: responseLength={}, tokens={}", result.json().length(), result.tokens());
+        log.info(LogMessages.LOG_GROQ_ANALYSIS_REQUEST_SUCCEEDED, result.json().length(), result.tokens());
         return result;
     }
 
@@ -147,58 +141,38 @@ public class GroqArticleSummaryService implements ArticleSummaryService {
     }
 
     private AiResponseDto requestAnalysis(String title, String description) throws IOException, InterruptedException {
-        String prompt = """
-            You are an API that returns structured JSON only.
-
-            Rules:
-            - No explanations
-            - No markdown
-            - Only valid JSON
-
-            Schema:
-            {
-              "summary": {"short": "string", "detailed": "string"},
-              "keyPoints": ["string"],
-              "tags": ["string"],
-              "highlights": [{"text": "string", "explanation": "string"}],
-              "metadata": {"readingTime": 0, "complexity": "easy | medium | hard"}
-            }
-
-            Article title: %s
-            Article content:
-            %s
-            """.formatted(normalize(title), normalize(description));
+        String prompt = String.format(GroqConstants.PROMPT_ANALYSIS, normalize(title), normalize(description));
 
         String requestBody = objectMapper.writeValueAsString(Map.of(
-            "model", groqModel,
-            "temperature", 0.2,
-            "max_completion_tokens", 1024,
-            "top_p", 0.95,
-            "stream", false,
-            "reasoning_effort", "none",
-            "reasoning_format", "hidden",
-            "messages", new Object[]{
-                Map.of("role", "user", "content", prompt)
+            GroqConstants.JSON_KEY_MODEL, groqModel,
+            GroqConstants.JSON_KEY_TEMPERATURE, GroqConstants.TEMPERATURE_ANALYSIS,
+            GroqConstants.JSON_KEY_MAX_COMPLETION_TOKENS, GroqConstants.MAX_COMPLETION_TOKENS_ANALYSIS,
+            GroqConstants.JSON_KEY_TOP_P, GroqConstants.TOP_P,
+            GroqConstants.JSON_KEY_STREAM, GroqConstants.STREAM,
+            GroqConstants.JSON_KEY_REASONING_EFFORT, GroqConstants.JSON_VALUE_REASONING_EFFORT_NONE,
+            GroqConstants.JSON_KEY_REASONING_FORMAT, GroqConstants.JSON_VALUE_REASONING_FORMAT_HIDDEN,
+            GroqConstants.JSON_KEY_MESSAGES, new Object[]{
+                Map.of(GroqConstants.JSON_KEY_ROLE, GroqConstants.JSON_VALUE_ROLE_USER, GroqConstants.JSON_KEY_CONTENT, prompt)
             }
         ));
 
         HttpRequest request = HttpRequest.newBuilder()
             .uri(URI.create(groqApiUrl))
             .timeout(Duration.ofMillis(groqRequestTimeoutMs))
-            .header("Authorization", "Bearer " + groqApiKey)
-            .header("Content-Type", MediaType.APPLICATION_JSON_VALUE)
+            .header("Authorization", GroqConstants.HTTP_HEADER_AUTHORIZATION_PREFIX + groqApiKey)
+            .header(GroqConstants.HTTP_HEADER_CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
             .POST(HttpRequest.BodyPublishers.ofString(requestBody))
             .build();
 
         HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
 
         if (response.statusCode() < 200 || response.statusCode() >= 300) {
-            throw new IOException("Groq API returned status " + response.statusCode() + " with body: " + response.body());
+            throw new IOException(String.format(ErrorMessages.ERROR_GROQ_API_STATUS, response.statusCode(), response.body()));
         }
 
         JsonNode root = objectMapper.readTree(response.body());
-        int tokensUsed = root.path("usage").path("total_tokens").asInt(0);
-        String content = normalize(root.path("choices").path(0).path("message").path("content").asText(""));
+        int tokensUsed = root.path(GroqConstants.JSON_KEY_USAGE).path(GroqConstants.JSON_KEY_TOTAL_TOKENS).asInt(0);
+        String content = normalize(root.path(GroqConstants.JSON_KEY_CHOICES).path(0).path(GroqConstants.JSON_KEY_MESSAGE).path(GroqConstants.JSON_KEY_CONTENT).asText(""));
 
         return new AiResponseDto(content, tokensUsed);
     }
